# advent2020

./: .gitignore
.github/workflows/: python-app.yml
python/: mypy.ini  pyproject.toml
python/day1/: day1.py
python/day2/: day2.py
python/day3/: day3.py
python/day4/: day4.py
python/day5/: day5.py
python/day6/: day6.py
python/day7/: day7.py
python/day8/: day8.py
python/tests/: test_day1.py  test_day2.py  test_day3.py
rust/day1/: Cargo.toml
rust/day1/src/: main.rs
rust/day2/: Cargo.toml
rust/day2/src/: main.rs
