[tool.poetry]
name = "advent2020"
version = "0.1.0"
description = ""
authors = ["Roy Williams <rwilliams@lyft.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
